policies/opa/require-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-app-label
spec:
  enforcementAction: dryrun
  match:
    namespaces: [devsecops-reference]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    labels: [app]
